weapon and add Defense to enemy model
